Obfuscate via external properties file configuration